--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "start": "nodemon backend/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "colors": "^1.4.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-async-handler": "^1.2.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
     "nodemon": "^3.1.11"
   }
